*** Changelog ***

= 7.5.0 - xxxx-xx-xx =
* Fix - Unable to process 0 amount subscription.

= 7.4.2 - 2023-07-31 =
* Fix - Add order key validation for UPE.
* Fix - Enhance query parameters validation in redirected requests.
* Fix - Resolved an issue with orders getting stuck on Pending Payment status when UPE is enabled and customer creates account during checkout.
* Fix - Stripe source and customer tokens not being saved on subscriptions when UPE is enabled and subscription is purchased by guest customer.
* Fix - Make the gateway unavailable when using it in live mode without SSL.
* Fix - Remove Stripe Link PRB when disabled from settings.
* Fix - Lookup existing refunds by refund ID when processing webhooks.
* Fix - Exclude Link from disable UPE confirmation modal in settings.
* Fix - Fix JS (ES5) compatibility on older browsers for the shortcode checkout.

= 7.4.1 - 2023-05-30 =
* Fix - Add Order Key Validation.
* Fix - Add sanitization and escaping some outputs.

= 7.4.0 - 2023-05-03 =
* Fix - Issue processing renewals for subscriptions without parent orders.

= 7.3.0 - 2023-04-12 =
* Fix - The payment requests are updated when product add-ons are changed (Product Add-ons extension).
* Add - Support eMandates for recurring payments made in INR

= 7.2.0 - 2023-03-09 =
* Fix - Hide PRB box in checkout block when PRBs disabled.
* Fix - Fix semi-hidden modal inline notices.

= 7.1.0 - 2023-02-08 =
* Fix - Replace some post meta methods with equivalent methods compatible with HPOS.
* Fix - Rare cases of payment processing failing when webhooks arrive before customer is redirected when UPE is enabled will no longer occur.
* Tweak - Update minimum supported versions for WordPress, WooCommerce, and PHP.
* Update – Declare this plugin compatible with High-Performance Order Storage (HPOS).

= 7.0.2 - 2023-01-11 =
* Fix - Expand charges object from incoming webhooks using Stripe API version 2022-11-15.