@@ -57,6 +57,14 @@ class WC_Stripe_Helper_Test extends WP_UnitTestCase {
 		$this->assertEquals( $payment_method_id, $request['payment_method'] );
 	}
 
+	public function test_add_payment_method_to_request_array_should_add_card_id_to_request() {
+		$payment_method_id = 'card_mock';
+		$request           = WC_Stripe_Helper::add_payment_method_to_request_array( $payment_method_id, [] );
+
+		$this->assertArrayHasKey( 'payment_method', $request, 'Card ID was not added to request array' );
+		$this->assertEquals( $payment_method_id, $request['payment_method'] );
+	}
+
 	public function test_add_payment_method_to_request_array_should_not_add_non_source_or_payment_method_to_request() {
 		$not_a_payment_method_id = 'cus_mock';
 		$request                 = WC_Stripe_Helper::add_payment_method_to_request_array( $not_a_payment_method_id, [] );
